--- a/OsipDemo/OsipDemo.vcxproj
+++ b/OsipDemo/OsipDemo.vcxproj
@@ -96,15 +96,15 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
-      <AdditionalIncludeDirectories>E:\code\curl-7.58.0\include\curl;$(SolutionDir)\include\osip;$(SolutionDir)\include\mxml;$(SolutionDir)\include\jthread;$(SolutionDir)\include\jrtplib;$(SolutionDir)\include;$(SolutionDir)\include\sdl</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)\include\osip;$(SolutionDir)\include\mxml;$(SolutionDir)\include\jthread;$(SolutionDir)\include\jrtplib;$(SolutionDir)\include;$(SolutionDir)\include\sdl;$(SolutionDir)\include\curl</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <Optimization>Disabled</Optimization>
     </ClCompile>
     <Link>
-      <AdditionalLibraryDirectories>$(SolutionDir)\lib;E:\code\curl-7.58.0\build\Win64\VC12\DLL Release</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(SolutionDir)\lib</AdditionalLibraryDirectories>
       <IgnoreSpecificDefaultLibraries>libcmt.lib</IgnoreSpecificDefaultLibraries>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>$(SolutionDir)\lib\*.lib;E:\code\curl-7.58.0\build\Win64\VC12\DLL Release\*.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>$(SolutionDir)\lib\*.lib;$(SolutionDir)\lib\sdl\*.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
